--- a/src-front/less/layout/_menus.less
+++ b/src-front/less/layout/_menus.less
@@ -1,7 +1,4 @@
-.page-menu {
-  background: @white;
-  padding: .7em @page-side-p;
-  border-bottom: 4px solid @header-bg;
+.main-menu-container {
   position: absolute;
   width: 100%;
   z-index: @main-menu-zi;
@@ -10,33 +7,45 @@
     position: initial;
   }
 
-  .menu-list {
-    @media screen and (min-width: @big-tablet) {
-      display: flex;
+  &.mobile-hide {
+    @media screen and (max-width: @big-tablet - 1px) {
+      display: none;
     }
+  }
 
-    .menu-item {
-      &:not(:first-of-type) {
-        margin-top: .5em;
+  .page-menu {
+    background: @white;
+    padding: .7em @page-side-p;
+    border-bottom: 4px solid @header-bg;
 
-        @media screen and (min-width: @big-tablet) {
-          margin-top: 0;
-          margin-left: 1.7em;
+    .menu-list {
+      @media screen and (min-width: @big-tablet) {
+        display: flex;
+      }
+
+      .menu-item {
+        &:not(:first-of-type) {
+          margin-top: .5em;
+
+          @media screen and (min-width: @big-tablet) {
+            margin-top: 0;
+            margin-left: 1.7em;
+          }
         }
-      }
 
-      .menu-link {
-        color: inherit;
-        .uppercase();
-        white-space: nowrap;
-      }
+        .menu-link {
+          color: inherit;
+          .uppercase();
+          white-space: nowrap;
+        }
 
-      &.active {
-        color: @dark-yellow;
-      }
+        &.active {
+          color: @dark-yellow;
+        }
 
-      &:hover {
-        color: @dark-yellow;
+        &:hover {
+          color: @dark-yellow;
+        }
       }
     }
   }
