--- a/src/views/Application/#layout.latte
+++ b/src/views/Application/#layout.latte
@@ -45,35 +45,37 @@
                         {/if}
                     </div>
                 </div>
-                <i class="hamburger-menu-i open-close-button" id=_menu-control-b"></i>
+                <i class="hamburger-menu-i open-close-button" id="_main-menu-control-b"></i>
                 <a class="action-link logout" href="/sign/out">Odhlásit se</a>
             </div>
         </div>
     </section>
 
-    <nav class="page-menu">
-        <ul class="menu-list">
-            <li n:class="menu-item, $contentView === 'summary.latte' ? active">
-                <a class="menu-link" href="/application">Přehled</a>
-            </li>
-            <li n:class="menu-item, $contentView === 'private-reminders-and-notes.latte' ? active">
-                <a class="menu-link" href="/application/reminders-and-notes/private">
-                    Moje {if $user->getClass() !== null}upozornění a{/if} poznámky
-                </a>
-            </li>
-            <li n:class="menu-item, $contentView === 'shared-reminders-and-notes.latte' ? active">
-                <a class="menu-link" href="/application/reminders-and-notes/shared">
-                    {if $user->getClass() !== null}Sdílená upozornění a{else}Sdílené{/if} poznámky
-                </a>
-            </li>
-            <li n:class="menu-item, $contentView === 'private-files.latte' ? active">
-                <a class="menu-link" href="/application/files/private">Moje soubory</a>
-            </li>
-            <li n:class="menu-item, $contentView === 'shared-files.latte' ? active">
-                <a class="menu-link" href="/application/files/shared">Sdílené soubory</a>
-            </li>
-        </ul>
-    </nav>
+    <div class="main-menu-container mobile-hide" id="_main-menu-container">
+        <nav class="page-menu">
+            <ul class="menu-list">
+                <li n:class="menu-item, $contentView === 'summary.latte' ? active">
+                    <a class="menu-link" href="/application">Přehled</a>
+                </li>
+                <li n:class="menu-item, $contentView === 'private-reminders-and-notes.latte' ? active">
+                    <a class="menu-link" href="/application/reminders-and-notes/private">
+                        Moje {if $user->getClass() !== null}upozornění a{/if} poznámky
+                    </a>
+                </li>
+                <li n:class="menu-item, $contentView === 'shared-reminders-and-notes.latte' ? active">
+                    <a class="menu-link" href="/application/reminders-and-notes/shared">
+                        {if $user->getClass() !== null}Sdílená upozornění a{else}Sdílené{/if} poznámky
+                    </a>
+                </li>
+                <li n:class="menu-item, $contentView === 'private-files.latte' ? active">
+                    <a class="menu-link" href="/application/files/private">Moje soubory</a>
+                </li>
+                <li n:class="menu-item, $contentView === 'shared-files.latte' ? active">
+                    <a class="menu-link" href="/application/files/shared">Sdílené soubory</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </header>
 
 
