--- a/src-front/less/pages/_profile.less
+++ b/src-front/less/pages/_profile.less
@@ -17,6 +17,7 @@
       background: @light-grey;
       border-radius: 100%;
       padding: .4em;
+      cursor: pointer;
 
       &:not(:first-child) {
         margin-left: .5em;
@@ -55,6 +56,7 @@
 
         .name {
           font-size: @font-s;
+          cursor: pointer;
         }
 
         .color {
@@ -64,6 +66,7 @@
           border-radius: 100%;
           border: 2px solid @white;
           background: black; // default value of input[type="color"]
+          cursor: pointer;
         }
       }
 
@@ -79,8 +82,9 @@
   width: 6em;
 
   .quota-text {
-    display: block;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     position: relative;
     top: 5em;
     font-size: @font-s - 0.01em;
@@ -104,46 +108,58 @@
     }
   }
 
-  .class-profile-menu {
+  .class-profile-menu-container {
     position: absolute;
     z-index: @menu-zi;
-    background: white;
     width: 100%;
-    border-bottom: 3px solid @middle-grey;
-    padding-bottom: .3em;
-    margin-top: .5em;
 
     @media screen and (min-width: @tablet) {
-      background: @light-grey;
       position: initial;
       z-index: initial;
       width: auto;
-      border-bottom: none;
-      padding-bottom: 0;
-      margin-top: 0;
     }
 
-    .class-profile-menu-list {
-      padding: 0 @page-p;
+    &.mobile-hide {
+      @media screen and (max-width: @tablet - 1px) {
+        display: none;
+      }
+    }
+
+    .class-profile-menu {
+      background: white;
+      border-bottom: 3px solid @middle-grey;
+      padding-bottom: .3em;
+      margin-top: .5em;
 
       @media screen and (min-width: @tablet) {
-        display: flex;
-        justify-content: space-between;
-        padding: .2em @page-p;
+        background: @light-grey;
+        border-bottom: none;
+        padding-bottom: 0;
+        margin-top: 0;
       }
 
-      .class-profile-menu-item {
-        padding: .1em 0;
-        .class-profile-menu-link {
-          color: @dark-grey;
-          .uppercase();
+      .class-profile-menu-list {
+        padding: 0 @page-p;
+
+        @media screen and (min-width: @tablet) {
+          display: flex;
+          justify-content: space-between;
+          padding: .2em @page-p;
         }
 
-        &.active,
-        &:hover {
+        .class-profile-menu-item {
+          padding: .1em 0;
           .class-profile-menu-link {
-            color: @dark-green;
-            font-weight: bold;
+            color: @dark-grey;
+            .uppercase();
+          }
+
+          &.active,
+          &:hover {
+            .class-profile-menu-link {
+              color: @dark-green;
+              font-weight: bold;
+            }
           }
         }
       }
@@ -452,6 +468,8 @@
 
         &.actions {
           white-space: nowrap;
+          text-align: right;
+          padding-right: .5em;
         }
       }
 
