--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -6785,6 +6785,7 @@ body.active-alert {
   background: #F8F7F7;
   border-radius: 100%;
   padding: 0.4em;
+  cursor: pointer;
 }
 .profile-image-changer .profile-icon .icon:not(:first-child) {
   margin-left: 0.5em;
@@ -6830,6 +6831,7 @@ body.active-alert {
 }
 .profile-image-changer .profile-icon .color-picker .target .name {
   font-size: 0.75em;
+  cursor: pointer;
 }
 .profile-image-changer .profile-icon .color-picker .target .color {
   display: block;
@@ -6838,6 +6840,7 @@ body.active-alert {
   border-radius: 100%;
   border: 2px solid white;
   background: black;
+  cursor: pointer;
 }
 .profile-image-changer .profile-icon .color-picker .form-input {
   display: none;
@@ -6847,8 +6850,16 @@ body.active-alert {
   width: 6em;
 }
 .quota .quota-text {
-  display: block;
-  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   position: relative;
   top: 5em;
   font-size: 0.74em;
@@ -6871,31 +6882,42 @@ body.active-alert {
     display: none;
   }
 }
-.class-profile-header .class-profile-menu {
+.class-profile-header .class-profile-menu-container {
   position: absolute;
   z-index: 8;
-  background: white;
   width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .class-profile-header .class-profile-menu-container {
+    position: initial;
+    z-index: initial;
+    width: auto;
+  }
+}
+@media screen and (max-width: 767px) {
+  .class-profile-header .class-profile-menu-container.mobile-hide {
+    display: none;
+  }
+}
+.class-profile-header .class-profile-menu-container .class-profile-menu {
+  background: white;
   border-bottom: 3px solid #EEE9E5;
   padding-bottom: 0.3em;
   margin-top: 0.5em;
 }
 @media screen and (min-width: 768px) {
-  .class-profile-header .class-profile-menu {
+  .class-profile-header .class-profile-menu-container .class-profile-menu {
     background: #F8F7F7;
-    position: initial;
-    z-index: initial;
-    width: auto;
     border-bottom: none;
     padding-bottom: 0;
     margin-top: 0;
   }
 }
-.class-profile-header .class-profile-menu .class-profile-menu-list {
+.class-profile-header .class-profile-menu-container .class-profile-menu .class-profile-menu-list {
   padding: 0 1em;
 }
 @media screen and (min-width: 768px) {
-  .class-profile-header .class-profile-menu .class-profile-menu-list {
+  .class-profile-header .class-profile-menu-container .class-profile-menu .class-profile-menu-list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -6905,16 +6927,16 @@ body.active-alert {
     padding: 0.2em 1em;
   }
 }
-.class-profile-header .class-profile-menu .class-profile-menu-list .class-profile-menu-item {
+.class-profile-header .class-profile-menu-container .class-profile-menu .class-profile-menu-list .class-profile-menu-item {
   padding: 0.1em 0;
 }
-.class-profile-header .class-profile-menu .class-profile-menu-list .class-profile-menu-item .class-profile-menu-link {
+.class-profile-header .class-profile-menu-container .class-profile-menu .class-profile-menu-list .class-profile-menu-item .class-profile-menu-link {
   color: #A7A5A6;
   text-transform: lowercase;
   font-family: "Alegreya sans SC", sans-serif;
 }
-.class-profile-header .class-profile-menu .class-profile-menu-list .class-profile-menu-item.active .class-profile-menu-link,
-.class-profile-header .class-profile-menu .class-profile-menu-list .class-profile-menu-item:hover .class-profile-menu-link {
+.class-profile-header .class-profile-menu-container .class-profile-menu .class-profile-menu-list .class-profile-menu-item.active .class-profile-menu-link,
+.class-profile-header .class-profile-menu-container .class-profile-menu .class-profile-menu-list .class-profile-menu-item:hover .class-profile-menu-link {
   color: #84ADAA;
   font-weight: bold;
 }
@@ -7200,6 +7222,8 @@ body.active-alert {
 }
 .class-profile-footer .access-requests-table tr td.actions {
   white-space: nowrap;
+  text-align: right;
+  padding-right: 0.5em;
 }
 .class-profile-footer .access-requests-table tr .action.approve {
   color: #84ADAA;
