--- a/src-front/templates/aplikacni-vrstva/profil-uzivatele-a-tridy.html
+++ b/src-front/templates/aplikacni-vrstva/profil-uzivatele-a-tridy.html
@@ -223,6 +223,10 @@
                         <td>4 roky</td>
                     </tr>
                 </table>
+
+                <div class="class-name-form-alerts" id="_edit-class-form-alerts">
+                    <p class="form-alert positive">Název třídy byl úspěšně změněn</p>
+                </div>
             </section>
 
             <!-- Učebny -->
