--- a/src/views/Admin/#layout.latte
+++ b/src/views/Admin/#layout.latte
@@ -44,14 +44,12 @@
 </main>
 
 <footer class="page-footer">
-    <div class="right-column">
+    <div class="left-column">
         <p class="footer-contact">
             <strong class="contact-mini-heading">Kontakt</strong>
             <a class="contact-email" href="mailto:moje-studium@ceskydj.cz">moje-studium@ceskydj.cz</a>
         </p>
-    </div>
 
-    <div class="left-column">
         <p class="footer-info">
             {spaceless}
                 Jedná se o maturitní projekt (ročník 2019/2020).
@@ -59,6 +57,12 @@
                 Zdrojové kódy je možné nalézl na
                 <a class="basic-link" href="https://github.com/ceskyDJ/moje-studium">Githubu</a>.
             {/spaceless}
+        </p>
+    </div>
+
+    <div class="right-column">
+        <p class="hosting-thanks">
+            Moje Studium běží díky hostingu <a href="https://zikum.cz/" class="link" rel="nofollow">Zikum.cz</a>
         </p>
     </div>
 </footer>
