--- a/src-front/less/layout/_footer.less
+++ b/src-front/less/layout/_footer.less
@@ -1,5 +1,5 @@
 .page-footer {
-  padding: @footer-p @page-side-p;
+  padding: @footer-p 0;
   background: @footer-bg;
   margin-top: auto;
   display: flex;
@@ -7,15 +7,22 @@
   justify-content: space-between;
 
   @media screen and (min-width: @desktop) {
-    flex-direction: row-reverse;
+    flex-direction: row;
   }
 
-  .right-column {
+  .left-column {
+    padding: 0 @page-side-p;
+
+    @media screen and (min-width: @desktop) {
+      width: 50%;
+    }
+
     .footer-contact {
       white-space: nowrap;
 
       .contact-mini-heading {
         margin-right: .5em;
+        .uppercase();
       }
 
       .contact-email {
@@ -23,20 +30,35 @@
       }
     }
 
-    .footer-admin-link {
-      margin-top: .7em;
+    .footer-info {
+      margin-top: 0.7em;
     }
   }
 
-  .left-column {
-    width: 50%;
+  .right-column {
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
 
-    .footer-info {
-      margin-top: 0.7em;
+    .hosting-thanks {
+      background: @dark-green;
+      color: @white;
+      margin-top: 1em;
+      padding: .3em 1.5em .3em .5em;
 
       @media screen and (min-width: @desktop) {
         margin-top: 0;
       }
+
+      .link {
+        color: @dark-yellow;
+        font-weight: bold;
+      }
+    }
+
+    .footer-admin-link {
+      margin-top: .7em;
+      margin-right: @page-side-p;
     }
   }
 
